// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`subscription actions manageManifestModal it should close manage-manifest modal 1`] = `
Object {
  "type": "SUBSCRIPTIONS_CLOSE_MANIFEST_MODAL",
}
`;

exports[`subscription actions manageManifestModal it should open manage-manifest modal 1`] = `
Object {
  "type": "SUBSCRIPTIONS_OPEN_MANIFEST_MODAL",
}
`;
